# Neural-Network-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  CTestTestfile.cmake  NeuralNetworkCpp  README.md  neural-network-cpp
Testing/Temporary/: CTestCostData.txt
doc/: CMakeLists.txt  Doxyfile
doc/html/: _activation_functions_8h.html  _activation_functions_8h_source.html  _layer_8cpp.html  _layer_8h.html  _layer_8h_source.html  _loss_functions_8h.html  _loss_functions_8h_source.html  _network_8cpp.html  _network_8h.html  _network_8h_source.html  _neuron_8cpp.html  _neuron_8h.html  _neuron_8h_source.html  _utils_8h.html  _utils_8h_source.html  annotated.html  class_layer-members.html  class_layer.html  class_network-members.html  class_network.html  class_neuron-members.html  class_neuron.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_enum.html  globals_func.html  index.html  main_8cpp.html  menudata.js  namespace_functions.html  namespace_loss_functions.html  namespace_utils.html  namespacemembers.html  namespacemembers_func.html  (+1 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  files_0.js  files_1.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+21 more)
doc/latex/: _activation_functions_8h.tex  _layer_8cpp.tex  _layer_8h.tex  _loss_functions_8h.tex  _network_8cpp.tex  _network_8h.tex  _neuron_8cpp.tex  _neuron_8h.tex  _utils_8h.tex  annotated.tex  class_layer.tex  class_network.tex  class_neuron.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  main_8cpp.tex  namespace_functions.tex  namespace_loss_functions.tex  namespace_utils.tex  namespaces.tex  refman.tex
src/: ActivationFunctions.h  Layer.cpp  Layer.h  LossFunctions.h  Network.cpp  Network.h  Neuron.cpp  Neuron.h  Trainer.cpp  Trainer.h  Utils.h  main.cpp
src/preprocess/: Pca.cpp  Pca.h  Preprocessor.h
test/: CMakeLists.txt  LayerTest.cpp  NetworkTest.cpp  NeuronTest.cpp  PcaTest.cpp  test_neural-network-cpp.cpp
